feat: 테스트 케이스 보강